# models/Favorito.js
@@ -1,0 +1,8 @@
+import mongoose from "mongoose";
+
+const favoritoSchema = new mongoose.Schema({
+  iduser: { type: String, required: true },
+  iditem: { type: String, required: true },
+});
+
+export default mongoose.model("Favorito", favoritoSchema);
